# ai

./: .cursorrules  .env.example  .gitignore  .gitleaks.toml  .markdownlint.json  .pre-commit-config.yaml  .rules  .terraform.lock.hcl  .trivyignore  .yamllint.yml  AGENTS.md  ATL-MIGRATION-README.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  PR_BODY.md  PR_BODY_INFISICAL_OUTAGE.md  README.md  RESTORE-RUNBOOK-PROMPT.md  VERSIONING_WEOWNVER.md  WORK_LOG.md  main.tf  mariadb-statefulset.yaml  matomo_input.txt  monitoring.tf  outputs.tf  sfo_backup.yaml  sfo_infrastructure.yaml  terraform.tfvars.example  test-copilot-attribution.txt  variables.tf
.github/: ADR-001-service-account-pat.md  ADR-002-infisical-github-sync.md  ADR-003-main-branch-ruleset.md  ADR-004-copilot-auto-review-ruleset.md  ADR-005-int-p01-doks-retirement.md  ADR-006-in-container-infisical-injection.md  CI_CD_WORKFLOWS.md  CODEOWNERS  INCIDENT_RESPONSE.md  SECURITY_ASSESSMENT.md  copilot-instructions.md
MVP-0.1/: README.md
anythingllm/: CHANGELOG.md  README.md  deploy.sh  install.sh  mcp.sh
anythingllm-docker/: DEPLOYMENT_GUIDE.md  README.md  answers.yaml.example  copier.yaml
braintrust-proxy/: Dockerfile  MODEL_GUIDE.md  (+4 more)
payless-tax/with-persona/: Dockerfile  app.py  docker-compose.yml  persona_client.py  pyproject.toml
payless-tax/withPersona/: .env.example  Dockerfile  README.md  app.py  db.py  docker-compose.yml  persona_client.py  pyproject.toml
payless-tax/withPersona/deploy/: nginx-with-persona.conf  setup-withpersona-droplet.sh  with-persona-docker-compose.service
(+1031 files in other folders)
